--- a/events/bellwether.html
+++ b/events/bellwether.html
@@ -45,7 +45,7 @@
 
     <!-- Section 1 -->
     <header id="header">
-      <a href="../esummit-2022.html" class="btn back-btn"
+      <a href="../index.html" class="btn back-btn"
         ><i class="fas fa-arrow-left"></i
       ></a>
       <!-- <img class="planet" src="./img/planet.svg" /> -->
