--- a/index.html
+++ b/index.html
@@ -404,13 +404,17 @@
         >
           <div class="subheading">To Be Revealed Soon...</div>
           <div class="content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum,
-            vero repellat unde, ratione quos, nihil dolores laboriosam
-            voluptatibus temporibus officiis iure beatae eaque ad nostrum ex sit
-            ipsam non quo nulla. Quam numquam alias nam, perferendis nobis sint
-            cupiditate, illo impedit, iusto corrupti sequi? Veniam deleniti
-            quasi iusto quis quae tempora vitae excepturi odio, voluptas enim.
-            Expedita quam quo eum?
+            "Laughing is a gazillion times more likely than praying to leave you
+            grateful to be alive."<br /><br />
+            How will you feel when you'll relate the awkward but funny moments
+            at same time with your dearest comedian acts ? SO YES !!! This is
+            the time !!!<br /><br />
+            ECell is proudly presenting farce COMEDY NIGHTS for Esummit'22. The
+            most exhilarating show you will ever experience !!!<br /><br />
+            Your favourite hilarious comedian will make your night full of
+            dazzling smiles . The comical drama of life will make your mid week
+            a lot better.<br /><br />
+            So come up with your gang and catch the highly competent comedian.
           </div>
 
           <div class="timing-container">
@@ -569,7 +573,7 @@
             <div id="contact-social" class="footer-social middle">
               <ul>
                 <li>
-                  <a href="hhttps://www.linkedin.com/in/parth-agarwal99/"
+                  <a href="https://www.linkedin.com/in/parth-agarwal99/"
                     ><i class="fab fa-linkedin btn2"></i
                   ></a>
                 </li>
@@ -584,7 +588,11 @@
         </div>
         <!-- item-7 -->
         <div class="item_owl">
-          <img src="img/1.jpeg" alt="North-East India" class="port" />
+          <img
+            src="./img/team/Rakshit.jpg"
+            alt="North-East India"
+            class="port"
+          />
           <div class="overlay">
             <h1 class="text">Rakshit Jain</h1>
 
@@ -621,12 +629,12 @@
             <div id="contact-social" class="footer-social middle">
               <ul>
                 <li>
-                  <a href="linkedin.com"
+                  <a href="https://www.linkedin.com/in/pranav-sharma-nsut/"
                     ><i class="fab fa-linkedin btn2"></i
                   ></a>
                 </li>
                 <li>
-                  <a href="instagram.com"
+                  <a href="https://www.instagram.com/pranav4939/"
                     ><i class="fab fa-instagram btn2"></i
                   ></a>
                 </li>
