--- a/events/bidshot.html
+++ b/events/bidshot.html
@@ -42,7 +42,7 @@
 
     <!-- Section 1 -->
     <header id="header">
-      <a href="../esummit-2022.html" class="btn back-btn"
+      <a href="../index.html" class="btn back-btn"
         ><i class="fas fa-arrow-left"></i
       ></a>
       <img class="logo" src="../img/logo-black.png" alt="Logo" />
