--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div href="#home" class="hamNav"><i class="fas fa-bars"></i></div>
 
         <div id="myLinks">
-          <ul class="nav-list">
+          <ul class="nav-list-ham">
             <li><a href="#home" class="ham-links">Home</a></li>
             <li><a href="#about" class="ham-links">About</a></li>
             <li><a href="#events" class="ham-links">Events</a></li>
@@ -284,12 +284,12 @@
 
     <!-- Speaker Area -->
     <!-- Temporary Content -->
-    <!-- <div class="speaker section" id="speaker">
+    <div class="speaker section" id="speaker">
       <h2 class="speaker-heading">Our Speakers</h2>
       <h2 style="font-size: 6rem; color: #fff">TO BE REVEALED SOON...</h2>
-    </div> -->
+    </div>
 
-    <section class="speaker section" id="speaker">
+    <!-- <section class="speaker section" id="speaker">
       <h2 class="speaker-heading">Our Speakers</h2>
       <div id="speaker-content" class="speaker-content">
         <div class="speaker-item">
@@ -377,7 +377,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- Comedy Night -->
     <div class="main-container section" id="comedy">
@@ -842,12 +842,213 @@
 
     <!-------SPONSOR--------->
     <!-- Temporary Content -->
-    <!-- <div class="sponsor-container section" id="sponsors">
-      <h2>SPONSORS</h2>
-      <h3 style="font-size: 6rem">TO BE REVEALED SOON...</h3>
-    </div> -->
-
     <div class="sponsor-container section" id="sponsors">
+      <h2>PAST SPONSORS</h2>
+      <div class="sponsors">
+        <div
+          class="gallery"
+          data-aos="slide-up"
+          data-aos-duration="400"
+          data-aos-easing="ease-in"
+        >
+          <img
+            class="image__img"
+            src="../EsummitArchives/E20/img/sponsers/BOI.jpg"
+            alt="sponsor"
+          />
+          <div class="overlay">
+            <div class="title">Bank of India</div>
+            <p class="description">Banking Partner</p>
+          </div>
+        </div>
+
+        <div
+          class="gallery"
+          data-aos="slide-up"
+          data-aos-duration="400"
+          data-aos-easing="ease-in"
+        >
+          <img
+            class="image__img"
+            src="../EsummitArchives/E20/img/sponsers/precisely.png"
+            alt="sponsor"
+          />
+          <div class="overlay">
+            <div class="title">Precisely</div>
+            <p class="description">Education Partner</p>
+          </div>
+        </div>
+
+        <div
+          class="gallery"
+          data-aos="slide-up"
+          data-aos-duration="400"
+          data-aos-easing="ease-in"
+        >
+          <img
+            class="image__img"
+            src="../EsummitArchives/E20/img/sponsers/smash.jpg"
+            alt="sponsor"
+          />
+          <div class="overlay">
+            <div class="title">Smaaash</div>
+            <p class="description">Gifting Partner</p>
+          </div>
+        </div>
+
+        <div
+          class="gallery"
+          data-aos="slide-up"
+          data-aos-duration="400"
+          data-aos-easing="ease-in"
+        >
+          <img
+            class="image__img"
+            src="../EsummitArchives/E20/img/sponsers/hiddenhour.png"
+            alt="sponsor"
+          />
+          <div class="overlay">
+            <div class="title">Hidden Hour</div>
+            <p class="description">Gifting Partner</p>
+          </div>
+        </div>
+
+        <div
+          class="gallery"
+          data-aos="slide-up"
+          data-aos-duration="400"
+          data-aos-easing="ease-in"
+        >
+          <img
+            class="image__img"
+            src="../EsummitArchives/E20/img/sponsers/education.png"
+            alt="sponsor"
+          />
+          <div class="overlay">
+            <div class="title">Education Tree</div>
+            <p class="description">Youth Partner</p>
+          </div>
+        </div>
+
+        <div
+          class="gallery"
+          data-aos="slide-up"
+          data-aos-duration="400"
+          data-aos-easing="ease-in"
+        >
+          <img
+            class="image__img"
+            src="../EsummitArchives/E20/img/sponsers/phamtak.png"
+            alt="sponsor"
+          />
+          <div class="overlay">
+            <div class="title">PharmTak</div>
+            <p class="description">Health Partner</p>
+          </div>
+        </div>
+
+        <div
+          class="gallery"
+          data-aos="slide-up"
+          data-aos-duration="400"
+          data-aos-easing="ease-in"
+        >
+          <img
+            class="image__img"
+            src="../EsummitArchives/E20/img/sponsers/duassian.jpeg"
+            alt="sponsor"
+          />
+          <div class="overlay">
+            <div class="title">DU Assassins</div>
+            <p class="description">Media Partner</p>
+          </div>
+        </div>
+
+        <div
+          class="gallery"
+          data-aos="slide-up"
+          data-aos-duration="400"
+          data-aos-easing="ease-in"
+        >
+          <img
+            class="image__img"
+            src="../EsummitArchives/E20/img/sponsers/duvives.jpeg"
+            alt="sponsor"
+          />
+          <div class="overlay">
+            <div class="title">DU Vibes</div>
+            <p class="description">Media Partner</p>
+          </div>
+        </div>
+
+        <div
+          class="gallery"
+          data-aos="slide-up"
+          data-aos-duration="400"
+          data-aos-easing="ease-in"
+        >
+          <img
+            class="image__img"
+            src="../EsummitArchives/E20/img/sponsers/duexpress.png"
+            alt="sponsor"
+          />
+          <div class="overlay">
+            <div class="title">DU Express</div>
+            <p class="description">Media Partner</p>
+          </div>
+        </div>
+        <div
+          class="gallery"
+          data-aos="slide-up"
+          data-aos-duration="400"
+          data-aos-easing="ease-in"
+        >
+          <img
+            class="image__img"
+            src="../EsummitArchives/E20/img/sponsers/duxposue.png"
+            alt="sponsor"
+          />
+          <div class="overlay">
+            <div class="title">DU Exposure</div>
+            <p class="description">Media Partner</p>
+          </div>
+        </div>
+        <div
+          class="gallery"
+          data-aos="slide-up"
+          data-aos-duration="400"
+          data-aos-easing="ease-in"
+        >
+          <img
+            class="image__img"
+            src="../EsummitArchives/E20/img/sponsers/feevin.jpeg"
+            alt="sponsor"
+          />
+          <div class="overlay">
+            <div class="title">feevin</div>
+            <p class="description">Media Partner</p>
+          </div>
+        </div>
+        <div
+          class="gallery"
+          data-aos="slide-up"
+          data-aos-duration="400"
+          data-aos-easing="ease-in"
+        >
+          <img
+            class="image__img"
+            src="../EsummitArchives/E20/img/sponsers/faad.jpeg"
+            alt="sponsor"
+          />
+          <div class="overlay">
+            <div class="title">Faad Networks</div>
+            <p class="description">Networking Partner</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- <div class="sponsor-container section" id="sponsors">
       <h2>SPONSORS</h2>
       <div class="sponsors">
         <div
@@ -954,7 +1155,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- Footer -->
     <footer id="footer" class="section">
