uncomment sponsors section

--- a/index.html
+++ b/index.html
@@ -284,12 +284,12 @@
 
     <!-- Speaker Area -->
     <!-- Temporary Content -->
-    <div class="speaker section" id="speaker">
+    <!-- <div class="speaker section" id="speaker">
       <h2 class="speaker-heading">Our Speakers</h2>
       <h2 style="font-size: 6rem; color: #fff">TO BE REVEALED SOON...</h2>
-    </div>
+    </div> -->
 
-    <!-- <section class="speaker section" id="speaker">
+    <section class="speaker section" id="speaker">
       <h2 class="speaker-heading">Our Speakers</h2>
       <div id="speaker-content" class="speaker-content">
         <div class="speaker-item">
@@ -377,7 +377,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <!-- Comedy Night -->
     <div class="main-container section" id="comedy">
@@ -853,7 +853,7 @@
         >
           <img
             class="image__img"
-            src="../EsummitArchives/E20/img/sponsers/BOI.jpg"
+            src="./img/1.png"
             alt="sponsor"
           />
           <div class="overlay">
@@ -870,7 +870,7 @@
         >
           <img
             class="image__img"
-            src="../EsummitArchives/E20/img/sponsers/precisely.png"
+            src="./img/1.png"
             alt="sponsor"
           />
           <div class="overlay">
@@ -887,7 +887,7 @@
         >
           <img
             class="image__img"
-            src="../EsummitArchives/E20/img/sponsers/smash.jpg"
+            src="./img/1.png"
             alt="sponsor"
           />
           <div class="overlay">
@@ -904,7 +904,7 @@
         >
           <img
             class="image__img"
-            src="../EsummitArchives/E20/img/sponsers/hiddenhour.png"
+            src="./img/1.png"
             alt="sponsor"
           />
           <div class="overlay">
@@ -921,7 +921,7 @@
         >
           <img
             class="image__img"
-            src="../EsummitArchives/E20/img/sponsers/education.png"
+            src="./img/1.png"
             alt="sponsor"
           />
           <div class="overlay">
@@ -938,7 +938,7 @@
         >
           <img
             class="image__img"
-            src="../EsummitArchives/E20/img/sponsers/phamtak.png"
+            src="./img/1.png"
             alt="sponsor"
           />
           <div class="overlay">
@@ -955,7 +955,7 @@
         >
           <img
             class="image__img"
-            src="../EsummitArchives/E20/img/sponsers/duassian.jpeg"
+            src="./img/1.png"
             alt="sponsor"
           />
           <div class="overlay">
@@ -972,7 +972,7 @@
         >
           <img
             class="image__img"
-            src="../EsummitArchives/E20/img/sponsers/duvives.jpeg"
+            src="./img/1.png"
             alt="sponsor"
           />
           <div class="overlay">
@@ -989,7 +989,7 @@
         >
           <img
             class="image__img"
-            src="../EsummitArchives/E20/img/sponsers/duexpress.png"
+            src="./img/1.png"
             alt="sponsor"
           />
           <div class="overlay">
@@ -1005,7 +1005,7 @@
         >
           <img
             class="image__img"
-            src="../EsummitArchives/E20/img/sponsers/duxposue.png"
+            src="./img/1.png"
             alt="sponsor"
           />
           <div class="overlay">
@@ -1021,7 +1021,7 @@
         >
           <img
             class="image__img"
-            src="../EsummitArchives/E20/img/sponsers/feevin.jpeg"
+            src="./img/1.png"
             alt="sponsor"
           />
           <div class="overlay">
@@ -1037,7 +1037,7 @@
         >
           <img
             class="image__img"
-            src="../EsummitArchives/E20/img/sponsers/faad.jpeg"
+            src="./img/1.png"
             alt="sponsor"
           />
           <div class="overlay">
